--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -21,6 +21,7 @@
     <parent>
         <groupId>org.bitcoinj</groupId>
         <artifactId>bitcoinj-parent</artifactId>
+        <!--<version>0.13.1-FAIRPAY</version>-->
         <version>0.13.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
