--- a/orchid/pom.xml
+++ b/orchid/pom.xml
@@ -6,6 +6,7 @@
     <parent>
         <groupId>org.bitcoinj</groupId>
         <artifactId>bitcoinj-parent</artifactId>
+        <!--<version>0.13.1-FAIRPAY</version>-->
         <version>0.13.1</version>
     </parent>
 
