--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 
   <groupId>org.bitcoinj</groupId>
   <artifactId>bitcoinj-parent</artifactId>
+  <!--<version>0.13.1-FAIRPAY</version>-->
   <version>0.13.1</version>
   <packaging>pom</packaging>
 
